php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #70432 segfault on import function
Submitted: 2015-09-05 00:41 UTC Modified: 2015-09-09 11:31 UTC
Votes:1
Avg. Score:5.0 ± 0.0
Reproduced:1 of 1 (100.0%)
Same Version:0 (0.0%)
Same OS:0 (0.0%)
From: pianisteg at gmail dot com Assigned: jimjag (profile)
Status: Closed Package: gnupg (PECL)
PHP Version: 5.4.45 OS: any
Private report: No CVE-ID: None
 [2015-09-05 00:41 UTC] pianisteg at gmail dot com
Description:
------------
Putting invalid data to import function causes segmentation fault.

Bugfix.

Put additional check in gnupg.c after line 1394 (after calling gpgme_op_import_result function):

 	if(!result || !result->imports){
 		RETURN_FALSE;
 	}


Test script:
---------------
<?

	$gpg = new gnupg();
	$r = $gpg->import("AAA");

?>



Patches

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2015-09-09 11:28 UTC] jimjag@php.net
Automatic comment from SVN on behalf of jimjag
Revision: http://svn.php.net/viewvc/?view=revision&amp;revision=337790
Log: Bug #70432      segfault on import function
 [2015-09-09 11:31 UTC] jimjag@php.net
-Status: Open +Status: Closed -Assigned To: +Assigned To: jimjag
 [2015-09-09 11:31 UTC] jimjag@php.net
fixed in trunk
 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Tue Sep 22 21:00:02 2026 UTC