Bug #70432      segfault on import function